Update servicio movement
